default model is @NullMarked